result field text-overflow fix

--- a/style.css
+++ b/style.css
@@ -274,7 +274,6 @@ input[type=result] {
     font-family: Myriad-R;
     cursor: default;
     padding: 0px 0px 0px 10px;
-    text-overflow: ellipsis;
 }
 
 input[type=table-start] {
